; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_ble_storage.c__btc_storage_get_ble_local_key.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_ble_storage.c__btc_storage_get_ble_local_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTC_BLE_STORAGE_LE_LOCAL_KEY_IR_STR = common dso_local global i8* null, align 8
@BTC_BLE_STORAGE_LE_LOCAL_KEY_IRK_STR = common dso_local global i8* null, align 8
@BTC_BLE_STORAGE_LE_LOCAL_KEY_DHK_STR = common dso_local global i8* null, align 8
@BTC_BLE_STORAGE_LE_LOCAL_KEY_ER_STR = common dso_local global i8* null, align 8
@BT_STATUS_FAIL = common dso_local global i32 0, align 4
@BTC_BLE_STORAGE_LOCAL_ADAPTER_STR = common dso_local global i32 0, align 4
@BT_STATUS_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @_btc_storage_get_ble_local_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_btc_storage_get_ble_local_key(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %20 [
    i32 129, label %12
    i32 128, label %14
    i32 131, label %16
    i32 130, label %18
  ]

12:                                               ; preds = %3
  %13 = load i8*, i8** @BTC_BLE_STORAGE_LE_LOCAL_KEY_IR_STR, align 8
  store i8* %13, i8** %8, align 8
  br label %22

14:                                               ; preds = %3
  %15 = load i8*, i8** @BTC_BLE_STORAGE_LE_LOCAL_KEY_IRK_STR, align 8
  store i8* %15, i8** %8, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i8*, i8** @BTC_BLE_STORAGE_LE_LOCAL_KEY_DHK_STR, align 8
  store i8* %17, i8** %8, align 8
  br label %22

18:                                               ; preds = %3
  %19 = load i8*, i8** @BTC_BLE_STORAGE_LE_LOCAL_KEY_ER_STR, align 8
  store i8* %19, i8** %8, align 8
  br label %22

20:                                               ; preds = %3
  %21 = load i32, i32* @BT_STATUS_FAIL, align 4
  store i32 %21, i32* %4, align 4
  br label %38

22:                                               ; preds = %18, %16, %14, %12
  %23 = load i32, i32* %7, align 4
  %24 = sext i32 %23 to i64
  store i64 %24, i64* %9, align 8
  %25 = load i32, i32* @BTC_BLE_STORAGE_LOCAL_ADAPTER_STR, align 4
  %26 = load i8*, i8** %8, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = bitcast i8* %27 to i32*
  %29 = call i32 @btc_config_get_bin(i32 %25, i8* %26, i32* %28, i64* %9)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %22
  %33 = load i32, i32* @BT_STATUS_SUCCESS, align 4
  br label %36

34:                                               ; preds = %22
  %35 = load i32, i32* @BT_STATUS_FAIL, align 4
  br label %36

36:                                               ; preds = %34, %32
  %37 = phi i32 [ %33, %32 ], [ %35, %34 ]
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %36, %20
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @btc_config_get_bin(i32, i8*, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
